fix(tokenSwapper): Fix issue where disabled input was not visible in darkmode

--- a/src/components/TextButton/TextButton.module.scss
+++ b/src/components/TextButton/TextButton.module.scss
@@ -1,3 +1,7 @@
 .root {
     text-transform: none;
 }
+
+.disabled {
+    color: rgba(var(--c-text-rgb), 0.7) !important;
+}
