--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -11,6 +11,7 @@ $c-black:           #000000;
 $c-tertiary:        #FF009C;
 $c-background:      #0C0B1D;
 $c-text:            #ffffff;
+$c-black-rgb:       0, 0, 0;
 $c-confirm-button:  linear-gradient(90deg, #6EF5D7 0%, #4EA8DE 49.14%, #6930C3 100%);
 
 $c-option-1: #7DEECE;
